--- a/application_server/package.json
+++ b/application_server/package.json
@@ -20,12 +20,14 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@types/stacktrace-js": "0.0.32",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "install": "^0.12.2",
     "jwt-decode": "^2.2.0",
     "rxjs": "6.0.0",
+    "stacktrace-js": "^2.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
